<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_error">用户名或密码不对，请仔细核对后重新尝试</string>
    <string name="register_error">用户名已存在，请重新输入注册信息</string>
    <string name="register_success">注册已成功，您将自动以登录的方式进入地图</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="LoginURL">login_servlet.do</string>
    <string name="RegisterURL">register_servlet.do</string>
    <string name="sendLocationURL">send_loc_servlet.do</string>
    <string name="commentSubmitURL">comment_servlet.do</string>
    <string name="getFriendListURL">friendlist.action</string>
    <string name="rescueToServerletURL">call_servlet.do</string>
    <string name="touristDensityURL">density.action</string>
    <string name="touristRouteURL">tourist_route.action</string>
    <string name="calculateRouteURL">calculate_route.action</string>
    <string name="getVideoURL">get_video.action</string>
    <string name="getVoiceURL">get_voice.action</string>
    <string name="getFriendLocationURL">friend_location.do</string>
    <string name="sendFeedbackURL">send_feedback.do</string>
    
    <string name="route_filename">tourist_route.txt</string>
    <string name="traffic">地图模式</string>
    <string name="satellite">卫星模式</string>
    <string name="my_location">根据我的位置查询</string>
    <string name="input">根据输入位置查询</string>
    <string name="textView">menu菜单</string>
    <string name="menu1">路径规划</string>
    <string name="menu2">沿途拍照</string>
    <string name="menu3">景点游客密度</string>
    <string name="menu4">好友位置</string>
    <string name="menu5">特色主题游</string>
    <string name="menu7">智能模式切换</string>
    <string name="menu8">景点天气查询</string>
    <string name="menu9">使用帮助</string>
    <string name="menu10">账户管理</string>
    <string name="menu11">意见反馈</string>
    <string name="menu12">退出</string>
    <string name="app_name">逍遥游</string>
    <string name="friend_name1">focuswenle</string>
    <string name="liujiao">liujiao</string>
    <string name="fan">fanxiang</string>
    <string name="miy">米亚晴</string>
    <string name="szh">宋泽辉</string>
    <string name="log_in_title">登陆</string>
    <string name="title">请选择目的地</string>
    <string name="moodselected">标记选择</string>
    <string name="username">输入用户名/手机号码</string>
    <string name="password">输入密码 </string>
    <string name="inputphonNum">请输入您的手机号码：</string>
    <string name="get_code_to_register">获取验证码</string>
    <string name="input_tel">请输入手机号码</string>
    <string name="input_username">请输入用户名</string>
    <string name="first_input_password">密码</string>
    <string name="second_input_password">再次输入密码</string>
    <string name="regist">注册</string>
    <string name="regist_label">注册</string>
    <string name="button_text">拍照</string>
    <string name="text1">我的心情:</string>
    <string name="myaccount">focusewuwenle</string>
    <string name="realse">发布</string>
    <string name="addFriend">添加好友</string>
    <string name="hello">Hello world!</string>
    <string name="log_in">登陆</string>
    <string name="send_to_friend">发送至好友</string>
    <string name="return_to_map_choose">返回地图选择</string>
    <string name="way_solution">线路规划</string>
    <string name="friend_locate">好友定位</string>
    <string name="accept">接受</string>
    <string name="accept_frend_request">接受好友验证</string>
    <string name="refuse">拒绝</string>
    <string name="dst_location">目的地点</string>
    <string name="input_friend_tel_req_msg">请输入同伴的手机号及验证消息</string>
    <string name="answer_msg">认证消息</string>
    <string name="tel_num">手机号</string>
    <string name="add_friend">添加好友</string>
    <string name="req_msg">验证消息</string>
    <string name="enter_directly">直接进入</string>
    <string name="register">注册</string>
    <string name="weather_label">景点天气查询</string>
    <string name="feedback_label">意见反馈</string>
    <string name="singleSelectListBtn">请选择目的景点</string> <!-- 声明名为btn的字符串资源 -->
    <string name="ok">确定</string> <!-- 声明名为ok的字符串资源 -->

    <string name="menu_settings">Settings</string>
    <string name="hello_world_list">helloscrolllist</string>

    <!-- 景点具体介绍界面 -->
    <string name="spot_grade_level">整体评分</string>
    <string name="spot_description_title">介绍</string>
    <string name="spot_photo_title">景点照片</string>
    <string name="spot_tourists_comment">游客评论</string>
    <string name="spot_me_comment">我要评论</string>
    <string name="spot_me_comment_nickname">昵称</string>
    <string name="spot_comment_content">填写评论内容</string>
    <string name="spot_comment_submit">发表</string>
    <string name="spot_tourist_grade_title">我要打分</string>
    <string name="spot_tourist_grade_submit">提交</string>

    <!-- 景点具体介绍之景点照片，长按菜单条显示 -->
    <string name="photo_long_press">12345</string>
    <string name="photography">摄影游</string>
    <string name="wuxia">武侠游</string>
    <string name="landscape">山水游</string>
    <string name="guji">古迹游</string>
    <string name="historical">历史游</string>
    <string name="huamanity">人文游</string>
    <string name="photography_Text">定格瞬间，记录美好</string>
    <string name="wuxia_Text">飞雪连天射白鹿，笑书神侠倚碧鸳</string>
    <string name="landscape_Text">月出惊山鸟， 时鸣春涧中</string>
    <string name="guji_Text">游大好河山，品历史文化</string>
    <string name="historical_Text">历史游古迹游古迹游</string>
    <string name="huamanity_Text">观乎天文，以察时变；观乎人文，以化成天下</string>
    <string name="ys">您选择了</string>
    <string name="themebutton_text">在地图上显示主题景点</string>

<!--    		 华山地图的左上角右下角以及中心经纬度  -->
    <string name="center_Lat">34.502237241233600</string>
    <string name="center_Long">110.084917545318000</string>
    <string name="lt_Lat">34.530389140120800</string>
    <string name="lt_Long">110.063824653625000</string>
    <string name="rb_Long">110.106010437011000</string>
    <string name="rb_Lat">34.474085342346300</string>
    <string name="shareTitle">即时分享</string>
    <string name="share_login_string">登陆我的微博</string>
    <string name="shareClose">取消</string>
    <string name="share_login_button">登陆</string>
    <string name="main_choose_login">登陆后即可享受景点评论、拍照分享等功能</string>
    <string name="main_choose_login_msg">登陆</string>
    <string name="main_choose_into">直接进入</string>
    <string name="myFriend_title">我的好友</string>
    <string name="themelist_title">主题</string>
    <string name="martial_arts">武侠游</string>
    <string name="feedback_title">意见反馈</string>
    <string name="account_title">账户管理</string>
    <string name="passwd1">输入新密码</string>
    <string name="passwd2">再次输入新密码</string>

</resources>