<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#C6E2FF" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:background="@drawable/spot_titlebg"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#C9C9C9"
        android:text="@string/log_in_title"
        android:textSize="20dp"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="fill_parent"
   				android:layout_height="wrap_content"
    			android:orientation="vertical"
    			android:layout_gravity="center" >
             <EditText
                android:layout_width="195dip"
        		android:layout_height="45dip"
        		android:layout_gravity="center"
        		android:gravity="left"
        		android:singleLine="true"
        	    android:layout_marginTop="50dip"
        	    android:paddingLeft="10dip"
        	    android:paddingTop="10dip"
        		android:scrollHorizontally="true" 
        		android:textColor="#aaaaaa"
	            android:textSize="12dip"
       	 		android:id="@+id/name"
       	 		android:hint="@string/username" > 
             </EditText>
             <EditText
                android:layout_width="195dip"
        		android:layout_height="45dip"
        		android:textStyle="bold"
        		android:gravity="left"
        		android:layout_gravity="center"
        		android:layout_marginTop="10dip"
        		android:paddingLeft="10dip"
        		android:paddingTop="10dip"
        		android:scrollHorizontally="true" 
        		android:password="true"
        		android:textColor="#aaaaaa"
	            android:textSize="12dip"
       	 		android:id="@+id/passwd" 
       	 		android:hint="@string/password"> 
             </EditText>
            </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:gravity="center_horizontal" 
                android:paddingTop="20dip" 
                android:paddingBottom="80dip"
                >"
            <Button
                android:text="@string/log_in"
                android:id="@+id/login"   
                android:gravity="center_horizontal" 
                android:padding="6dip"
                android:textSize="12dp"
                android:layout_width="90dip"
                android:background="@drawable/login_button_bg"
                android:textColor="#191970"
        		android:layout_height="32dip">
            </Button>

            <Button
                android:text="注册"
                android:id="@+id/regist"
                android:gravity="center_horizontal"
                android:textSize="12dp"
                android:padding="6dip"
                android:textColor="#191970"
                android:layout_marginLeft="10dip"
                android:background="@drawable/login_button_bg"
                android:layout_width="90dip"
        		android:layout_height="32dip">
            </Button>
      </LinearLayout>
</LinearLayout>