<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D8D8D6"
    android:orientation="vertical" >

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#283C57" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:background="#283C57"
            android:gravity="center"
            android:text="@string/shareTitle"
            android:textColor="#FFFFFF"
            android:textSize="18dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shareClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="7dip"
            android:background="@drawable/share_photo"
            android:gravity="center"
            android:text="@string/shareClose"
            android:textColor="#283C57"
            android:textSize="12dip" />

        <Button
            android:id="@+id/sharelogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:layout_marginTop="7dip"
            android:background="@drawable/share_photo"
            android:gravity="center"
            android:text="@string/share_login_button"
            android:textColor="#283C57"
            android:textSize="12dip" />
    </FrameLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" />

    <!--  
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:text="@string/text1"
        android:textColor="#2D77A6"
        android:textSize="12dip"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/blog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="top"
        android:maxLines="2"
        android:minLines="2"
        android:paddingLeft="5dip"
        android:singleLine="false"
        android:textStyle="bold" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
"

        <TextView
            android:id="@+id/share_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/blog"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginLeft="20dip"
            android:text="@string/share_login_string"
            android:textColor="#D75B11"
            android:textSize="14dip" />

        <Button
            android:id="@+id/realseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/blog"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dip"
            android:background="@drawable/weibo_release"
            android:text="@string/realse" />
    </RelativeLayout>
    -->

</LinearLayout>